hw2/answer/decafast.output
Terminals unused in grammar

   T_NULL
   T_DOT
   T_COMMENT
   T_WHITESPACE
   T_UNARYMINUS
   T_ERROR_1
   T_ERROR_2
   T_ERROR_3


State 26 conflicts: 2 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: extern_list decafpackage

    3 extern_list: %empty
    4            | extern_def extern_list

    5 extern_def: T_EXTERN T_FUNC T_ID T_LPAREN extern_type_comma_list T_RPAREN method_type T_SEMICOLON

    6 extern_type_comma_list: extern_type T_COMMA extern_type_comma_list
    7                       | extern_type
    8                       | %empty

    9 decafpackage: T_PACKAGE T_ID T_LCB field_decls method_decls T_RCB

   10 field_decls: %empty
   11            | field_decl field_decls

   12 field_decl: T_VAR T_ID id_comma_list decaf_type T_SEMICOLON
   13           | T_VAR T_ID id_comma_list array_type T_SEMICOLON
   14           | T_VAR T_ID decaf_type T_ASSIGN expr T_SEMICOLON

   15 id_comma_list: T_COMMA T_ID id_comma_list
   16              | %empty

   17 method_decls: %empty
   18             | method_decl method_decls

   19 method_decl: T_FUNC T_ID T_LPAREN param_list T_RPAREN method_type block

   20 param_list: %empty
   21           | id_type_comma_list

   22 id_type_comma_list: T_ID decaf_type T_COMMA id_type_comma_list
   23                   | T_ID decaf_type

   24 block: T_LCB var_decls statements T_RCB

   25 var_decls: %empty
   26          | var_decl var_decls

   27 var_decl: T_VAR id_comma_list decaf_type T_SEMICOLON

   28 statements: %empty
   29           | statement statements

   30 statement: block
   31          | assign T_SEMICOLON
   32          | method_call T_SEMICOLON
   33          | if_stmt
   34          | while_stmt
   35          | for_stmt
   36          | return_stmt T_SEMICOLON
   37          | break_stmt T_SEMICOLON
   38          | continue_stmt T_SEMICOLON

   39 assign: value T_ASSIGN expr

   40 method_call: T_ID T_LPAREN method_arg_list T_RPAREN

   41 if_stmt: T_IF T_LPAREN expr T_RPAREN block
   42        | T_IF T_LPAREN expr T_RPAREN block T_ELSE block

   43 while_stmt: T_WHILE T_LPAREN expr T_RPAREN block

   44 for_stmt: T_FOR T_LPAREN assign_list T_SEMICOLON expr T_SEMICOLON assign_list T_RPAREN block

   45 return_stmt: T_RETURN T_LPAREN optional_expr T_RPAREN
   46            | T_RETURN

   47 break_stmt: T_BREAK

   48 continue_stmt: T_CONTINUE

   49 optional_expr: %empty
   50              | expr

   51 assign_list: assign T_COMMA assign_list
   52            | assign

   53 method_arg_list: %empty
   54                | method_arg_comma_list

   55 method_arg_comma_list: method_arg T_COMMA method_arg_comma_list
   56                      | method_arg

   57 method_arg: T_STRINGCONSTANT
   58           | expr

   59 expr: value
   60     | method_call
   61     | constant
   62     | expr T_PLUS expr
   63     | expr T_MINUS expr
   64     | expr T_MULT expr
   65     | expr T_DIV expr
   66     | expr T_LEFTSHIFT expr
   67     | expr T_RIGHTSHIFT expr
   68     | expr T_MOD expr
   69     | expr T_EQ expr
   70     | expr T_NEQ expr
   71     | expr T_LT expr
   72     | expr T_LEQ expr
   73     | expr T_RT expr
   74     | expr T_GEQ expr
   75     | expr T_AND expr
   76     | expr T_OR expr
   77     | T_LPAREN expr T_RPAREN
   78     | T_MINUS expr
   79     | T_NOT expr

   80 value: T_ID T_LSB expr T_RSB
   81      | T_ID

   82 constant: T_INTCONSTANT
   83         | T_CHARCONSTANT
   84         | bool_constant

   85 bool_constant: T_TRUE
   86              | T_FALSE

   87 decaf_type: T_INTTYPE
   88           | T_BOOLTYPE

   89 array_type: T_LSB T_INTCONSTANT T_RSB decaf_type

   90 method_type: T_VOID
   91            | decaf_type

   92 extern_type: T_STRINGTYPE
   93            | decaf_type


Terminals, with rules where they appear

$end (0) 0
error (256)
T_FUNC (258) 5 19
T_PACKAGE (259) 9
T_VAR (260) 12 13 14 27
T_INTTYPE (261) 87
T_STRINGTYPE (262) 92
T_BOOLTYPE (263) 88
T_VOID (264) 90
T_NULL (265)
T_BREAK (266) 47
T_CONTINUE (267) 48
T_EXTERN (268) 5
T_TRUE (269) 85
T_FALSE (270) 86
T_IF (271) 41 42
T_ELSE (272) 42
T_FOR (273) 44
T_WHILE (274) 43
T_RETURN (275) 45 46
T_LCB (276) 9 24
T_RCB (277) 9 24
T_LPAREN (278) 5 19 40 41 42 43 44 45 77
T_RPAREN (279) 5 19 40 41 42 43 44 45 77
T_LSB (280) 80 89
T_RSB (281) 80 89
T_COMMA (282) 6 15 22 51 55
T_SEMICOLON (283) 5 12 13 14 27 31 32 36 37 38 44
T_EQ (284) 69
T_LEQ (285) 72
T_GEQ (286) 74
T_NEQ (287) 70
T_LEFTSHIFT (288) 66
T_RIGHTSHIFT (289) 67
T_AND (290) 75
T_OR (291) 76
T_PLUS (292) 62
T_MINUS (293) 63 78
T_MULT (294) 64
T_DIV (295) 65
T_NOT (296) 79
T_ASSIGN (297) 14 39
T_LT (298) 71
T_RT (299) 73
T_MOD (300) 68
T_DOT (301)
T_COMMENT (302)
T_INTCONSTANT (303) 82 89
T_CHARCONSTANT (304) 83
T_STRINGCONSTANT (305) 57
T_ID (306) 5 9 12 13 14 15 19 22 23 40 80 81
T_WHITESPACE (307)
T_UNARYMINUS (308)
T_ERROR_1 (309)
T_ERROR_2 (310)
T_ERROR_3 (311)
T_UMINUS (312)
T_UNOT (313)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
start (60)
    on left: 1, on right: 0
program (61)
    on left: 2, on right: 1
extern_list (62)
    on left: 3 4, on right: 2 4
extern_def (63)
    on left: 5, on right: 4
extern_type_comma_list (64)
    on left: 6 7 8, on right: 5 6
decafpackage (65)
    on left: 9, on right: 2
field_decls (66)
    on left: 10 11, on right: 9 11
field_decl (67)
    on left: 12 13 14, on right: 11
id_comma_list (68)
    on left: 15 16, on right: 12 13 15 27
method_decls (69)
    on left: 17 18, on right: 9 18
method_decl (70)
    on left: 19, on right: 18
param_list (71)
    on left: 20 21, on right: 19
id_type_comma_list (72)
    on left: 22 23, on right: 21 22
block (73)
    on left: 24, on right: 19 30 41 42 43 44
var_decls (74)
    on left: 25 26, on right: 24 26
var_decl (75)
    on left: 27, on right: 26
statements (76)
    on left: 28 29, on right: 24 29
statement (77)
    on left: 30 31 32 33 34 35 36 37 38, on right: 29
assign (78)
    on left: 39, on right: 31 51 52
method_call (79)
    on left: 40, on right: 32 60
if_stmt (80)
    on left: 41 42, on right: 33
while_stmt (81)
    on left: 43, on right: 34
for_stmt (82)
    on left: 44, on right: 35
return_stmt (83)
    on left: 45 46, on right: 36
break_stmt (84)
    on left: 47, on right: 37
continue_stmt (85)
    on left: 48, on right: 38
optional_expr (86)
    on left: 49 50, on right: 45
assign_list (87)
    on left: 51 52, on right: 44 51
method_arg_list (88)
    on left: 53 54, on right: 40
method_arg_comma_list (89)
    on left: 55 56, on right: 54 55
method_arg (90)
    on left: 57 58, on right: 55 56
expr (91)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79, on right: 14 39 41 42 43 44 50 58 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80
value (92)
    on left: 80 81, on right: 39 59
constant (93)
    on left: 82 83 84, on right: 61
bool_constant (94)
    on left: 85 86, on right: 84
decaf_type (95)
    on left: 87 88, on right: 12 14 22 23 27 89 91 93
array_type (96)
    on left: 89, on right: 13
method_type (97)
    on left: 90 91, on right: 5 19
extern_type (98)
    on left: 92 93, on right: 6 7


State 0

    0 $accept: . start $end

    T_EXTERN  shift, and go to state 1

    $default  reduce using rule 3 (extern_list)

    start        go to state 2
    program      go to state 3
    extern_list  go to state 4
    extern_def   go to state 5


State 1

    5 extern_def: T_EXTERN . T_FUNC T_ID T_LPAREN extern_type_comma_list T_RPAREN method_type T_SEMICOLON

    T_FUNC  shift, and go to state 6


State 2

    0 $accept: start . $end

    $end  shift, and go to state 7


State 3

    1 start: program .

    $default  reduce using rule 1 (start)


State 4

    2 program: extern_list . decafpackage

    T_PACKAGE  shift, and go to state 8

    decafpackage  go to state 9


State 5

    4 extern_list: extern_def . extern_list

    T_EXTERN  shift, and go to state 1

    $default  reduce using rule 3 (extern_list)

    extern_list  go to state 10
    extern_def   go to state 5


State 6

    5 extern_def: T_EXTERN T_FUNC . T_ID T_LPAREN extern_type_comma_list T_RPAREN method_type T_SEMICOLON

    T_ID  shift, and go to state 11


State 7

    0 $accept: start $end .

    $default  accept


State 8

    9 decafpackage: T_PACKAGE . T_ID T_LCB field_decls method_decls T_RCB

    T_ID  shift, and go to state 12


State 9

    2 program: extern_list decafpackage .

    $default  reduce using rule 2 (program)


State 10

    4 extern_list: extern_def extern_list .

    $default  reduce using rule 4 (extern_list)


State 11

    5 extern_def: T_EXTERN T_FUNC T_ID . T_LPAREN extern_type_comma_list T_RPAREN method_type T_SEMICOLON

    T_LPAREN  shift, and go to state 13


State 12

    9 decafpackage: T_PACKAGE T_ID . T_LCB field_decls method_decls T_RCB

    T_LCB  shift, and go to state 14


State 13

    5 extern_def: T_EXTERN T_FUNC T_ID T_LPAREN . extern_type_comma_list T_RPAREN method_type T_SEMICOLON

    T_INTTYPE     shift, and go to state 15
    T_STRINGTYPE  shift, and go to state 16
    T_BOOLTYPE    shift, and go to state 17

    $default  reduce using rule 8 (extern_type_comma_list)

    extern_type_comma_list  go to state 18
    decaf_type              go to state 19
    extern_type             go to state 20


State 14

    9 decafpackage: T_PACKAGE T_ID T_LCB . field_decls method_decls T_RCB

    T_VAR  shift, and go to state 21

    $default  reduce using rule 10 (field_decls)

    field_decls  go to state 22
    field_decl   go to state 23


State 15

   87 decaf_type: T_INTTYPE .

    $default  reduce using rule 87 (decaf_type)


State 16

   92 extern_type: T_STRINGTYPE .

    $default  reduce using rule 92 (extern_type)


State 17

   88 decaf_type: T_BOOLTYPE .

    $default  reduce using rule 88 (decaf_type)


State 18

    5 extern_def: T_EXTERN T_FUNC T_ID T_LPAREN extern_type_comma_list . T_RPAREN method_type T_SEMICOLON

    T_RPAREN  shift, and go to state 24


State 19

   93 extern_type: decaf_type .

    $default  reduce using rule 93 (extern_type)


State 20

    6 extern_type_comma_list: extern_type . T_COMMA extern_type_comma_list
    7                       | extern_type .

    T_COMMA  shift, and go to state 25

    $default  reduce using rule 7 (extern_type_comma_list)


State 21

   12 field_decl: T_VAR . T_ID id_comma_list decaf_type T_SEMICOLON
   13           | T_VAR . T_ID id_comma_list array_type T_SEMICOLON
   14           | T_VAR . T_ID decaf_type T_ASSIGN expr T_SEMICOLON

    T_ID  shift, and go to state 26


State 22

    9 decafpackage: T_PACKAGE T_ID T_LCB field_decls . method_decls T_RCB

    T_FUNC  shift, and go to state 27

    $default  reduce using rule 17 (method_decls)

    method_decls  go to state 28
    method_decl   go to state 29


State 23

   11 field_decls: field_decl . field_decls

    T_VAR  shift, and go to state 21

    $default  reduce using rule 10 (field_decls)

    field_decls  go to state 30
    field_decl   go to state 23


State 24

    5 extern_def: T_EXTERN T_FUNC T_ID T_LPAREN extern_type_comma_list T_RPAREN . method_type T_SEMICOLON

    T_INTTYPE   shift, and go to state 15
    T_BOOLTYPE  shift, and go to state 17
    T_VOID      shift, and go to state 31

    decaf_type   go to state 32
    method_type  go to state 33


State 25

    6 extern_type_comma_list: extern_type T_COMMA . extern_type_comma_list

    T_INTTYPE     shift, and go to state 15
    T_STRINGTYPE  shift, and go to state 16
    T_BOOLTYPE    shift, and go to state 17

    $default  reduce using rule 8 (extern_type_comma_list)

    extern_type_comma_list  go to state 34
    decaf_type              go to state 19
    extern_type             go to state 20


State 26

   12 field_decl: T_VAR T_ID . id_comma_list decaf_type T_SEMICOLON
   13           | T_VAR T_ID . id_comma_list array_type T_SEMICOLON
   14           | T_VAR T_ID . decaf_type T_ASSIGN expr T_SEMICOLON

    T_INTTYPE   shift, and go to state 15
    T_BOOLTYPE  shift, and go to state 17
    T_COMMA     shift, and go to state 35

    T_INTTYPE   [reduce using rule 16 (id_comma_list)]
    T_BOOLTYPE  [reduce using rule 16 (id_comma_list)]
    $default    reduce using rule 16 (id_comma_list)

    id_comma_list  go to state 36
    decaf_type     go to state 37


State 27

   19 method_decl: T_FUNC . T_ID T_LPAREN param_list T_RPAREN method_type block

    T_ID  shift, and go to state 38


State 28

    9 decafpackage: T_PACKAGE T_ID T_LCB field_decls method_decls . T_RCB

    T_RCB  shift, and go to state 39


State 29

   18 method_decls: method_decl . method_decls

    T_FUNC  shift, and go to state 27

    $default  reduce using rule 17 (method_decls)

    method_decls  go to state 40
    method_decl   go to state 29


State 30

   11 field_decls: field_decl field_decls .

    $default  reduce using rule 11 (field_decls)


State 31

   90 method_type: T_VOID .

    $default  reduce using rule 90 (method_type)


State 32

   91 method_type: decaf_type .

    $default  reduce using rule 91 (method_type)


State 33

    5 extern_def: T_EXTERN T_FUNC T_ID T_LPAREN extern_type_comma_list T_RPAREN method_type . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 41


State 34

    6 extern_type_comma_list: extern_type T_COMMA extern_type_comma_list .

    $default  reduce using rule 6 (extern_type_comma_list)


State 35

   15 id_comma_list: T_COMMA . T_ID id_comma_list

    T_ID  shift, and go to state 42


State 36

   12 field_decl: T_VAR T_ID id_comma_list . decaf_type T_SEMICOLON
   13           | T_VAR T_ID id_comma_list . array_type T_SEMICOLON

    T_INTTYPE   shift, and go to state 15
    T_BOOLTYPE  shift, and go to state 17
    T_LSB       shift, and go to state 43

    decaf_type  go to state 44
    array_type  go to state 45


State 37

   14 field_decl: T_VAR T_ID decaf_type . T_ASSIGN expr T_SEMICOLON

    T_ASSIGN  shift, and go to state 46


State 38

   19 method_decl: T_FUNC T_ID . T_LPAREN param_list T_RPAREN method_type block

    T_LPAREN  shift, and go to state 47


State 39

    9 decafpackage: T_PACKAGE T_ID T_LCB field_decls method_decls T_RCB .

    $default  reduce using rule 9 (decafpackage)


State 40

   18 method_decls: method_decl method_decls .

    $default  reduce using rule 18 (method_decls)


State 41

    5 extern_def: T_EXTERN T_FUNC T_ID T_LPAREN extern_type_comma_list T_RPAREN method_type T_SEMICOLON .

    $default  reduce using rule 5 (extern_def)


State 42

   15 id_comma_list: T_COMMA T_ID . id_comma_list

    T_COMMA  shift, and go to state 35

    $default  reduce using rule 16 (id_comma_list)

    id_comma_list  go to state 48


State 43

   89 array_type: T_LSB . T_INTCONSTANT T_RSB decaf_type

    T_INTCONSTANT  shift, and go to state 49


State 44

   12 field_decl: T_VAR T_ID id_comma_list decaf_type . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 50


State 45

   13 field_decl: T_VAR T_ID id_comma_list array_type . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 51


State 46

   14 field_decl: T_VAR T_ID decaf_type T_ASSIGN . expr T_SEMICOLON

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 61
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 47

   19 method_decl: T_FUNC T_ID T_LPAREN . param_list T_RPAREN method_type block

    T_ID  shift, and go to state 65

    $default  reduce using rule 20 (param_list)

    param_list          go to state 66
    id_type_comma_list  go to state 67


State 48

   15 id_comma_list: T_COMMA T_ID id_comma_list .

    $default  reduce using rule 15 (id_comma_list)


State 49

   89 array_type: T_LSB T_INTCONSTANT . T_RSB decaf_type

    T_RSB  shift, and go to state 68


State 50

   12 field_decl: T_VAR T_ID id_comma_list decaf_type T_SEMICOLON .

    $default  reduce using rule 12 (field_decl)


State 51

   13 field_decl: T_VAR T_ID id_comma_list array_type T_SEMICOLON .

    $default  reduce using rule 13 (field_decl)


State 52

   85 bool_constant: T_TRUE .

    $default  reduce using rule 85 (bool_constant)


State 53

   86 bool_constant: T_FALSE .

    $default  reduce using rule 86 (bool_constant)


State 54

   77 expr: T_LPAREN . expr T_RPAREN

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 69
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 55

   78 expr: T_MINUS . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 70
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 56

   79 expr: T_NOT . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 71
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 57

   82 constant: T_INTCONSTANT .

    $default  reduce using rule 82 (constant)


State 58

   83 constant: T_CHARCONSTANT .

    $default  reduce using rule 83 (constant)


State 59

   40 method_call: T_ID . T_LPAREN method_arg_list T_RPAREN
   80 value: T_ID . T_LSB expr T_RSB
   81      | T_ID .

    T_LPAREN  shift, and go to state 72
    T_LSB     shift, and go to state 73

    $default  reduce using rule 81 (value)


State 60

   60 expr: method_call .

    $default  reduce using rule 60 (expr)


State 61

   14 field_decl: T_VAR T_ID decaf_type T_ASSIGN expr . T_SEMICOLON
   62 expr: expr . T_PLUS expr
   63     | expr . T_MINUS expr
   64     | expr . T_MULT expr
   65     | expr . T_DIV expr
   66     | expr . T_LEFTSHIFT expr
   67     | expr . T_RIGHTSHIFT expr
   68     | expr . T_MOD expr
   69     | expr . T_EQ expr
   70     | expr . T_NEQ expr
   71     | expr . T_LT expr
   72     | expr . T_LEQ expr
   73     | expr . T_RT expr
   74     | expr . T_GEQ expr
   75     | expr . T_AND expr
   76     | expr . T_OR expr

    T_SEMICOLON   shift, and go to state 74
    T_EQ          shift, and go to state 75
    T_LEQ         shift, and go to state 76
    T_GEQ         shift, and go to state 77
    T_NEQ         shift, and go to state 78
    T_LEFTSHIFT   shift, and go to state 79
    T_RIGHTSHIFT  shift, and go to state 80
    T_AND         shift, and go to state 81
    T_OR          shift, and go to state 82
    T_PLUS        shift, and go to state 83
    T_MINUS       shift, and go to state 84
    T_MULT        shift, and go to state 85
    T_DIV         shift, and go to state 86
    T_LT          shift, and go to state 87
    T_RT          shift, and go to state 88
    T_MOD         shift, and go to state 89


State 62

   59 expr: value .

    $default  reduce using rule 59 (expr)


State 63

   61 expr: constant .

    $default  reduce using rule 61 (expr)


State 64

   84 constant: bool_constant .

    $default  reduce using rule 84 (constant)


State 65

   22 id_type_comma_list: T_ID . decaf_type T_COMMA id_type_comma_list
   23                   | T_ID . decaf_type

    T_INTTYPE   shift, and go to state 15
    T_BOOLTYPE  shift, and go to state 17

    decaf_type  go to state 90


State 66

   19 method_decl: T_FUNC T_ID T_LPAREN param_list . T_RPAREN method_type block

    T_RPAREN  shift, and go to state 91


State 67

   21 param_list: id_type_comma_list .

    $default  reduce using rule 21 (param_list)


State 68

   89 array_type: T_LSB T_INTCONSTANT T_RSB . decaf_type

    T_INTTYPE   shift, and go to state 15
    T_BOOLTYPE  shift, and go to state 17

    decaf_type  go to state 92


State 69

   62 expr: expr . T_PLUS expr
   63     | expr . T_MINUS expr
   64     | expr . T_MULT expr
   65     | expr . T_DIV expr
   66     | expr . T_LEFTSHIFT expr
   67     | expr . T_RIGHTSHIFT expr
   68     | expr . T_MOD expr
   69     | expr . T_EQ expr
   70     | expr . T_NEQ expr
   71     | expr . T_LT expr
   72     | expr . T_LEQ expr
   73     | expr . T_RT expr
   74     | expr . T_GEQ expr
   75     | expr . T_AND expr
   76     | expr . T_OR expr
   77     | T_LPAREN expr . T_RPAREN

    T_RPAREN      shift, and go to state 93
    T_EQ          shift, and go to state 75
    T_LEQ         shift, and go to state 76
    T_GEQ         shift, and go to state 77
    T_NEQ         shift, and go to state 78
    T_LEFTSHIFT   shift, and go to state 79
    T_RIGHTSHIFT  shift, and go to state 80
    T_AND         shift, and go to state 81
    T_OR          shift, and go to state 82
    T_PLUS        shift, and go to state 83
    T_MINUS       shift, and go to state 84
    T_MULT        shift, and go to state 85
    T_DIV         shift, and go to state 86
    T_LT          shift, and go to state 87
    T_RT          shift, and go to state 88
    T_MOD         shift, and go to state 89


State 70

   62 expr: expr . T_PLUS expr
   63     | expr . T_MINUS expr
   64     | expr . T_MULT expr
   65     | expr . T_DIV expr
   66     | expr . T_LEFTSHIFT expr
   67     | expr . T_RIGHTSHIFT expr
   68     | expr . T_MOD expr
   69     | expr . T_EQ expr
   70     | expr . T_NEQ expr
   71     | expr . T_LT expr
   72     | expr . T_LEQ expr
   73     | expr . T_RT expr
   74     | expr . T_GEQ expr
   75     | expr . T_AND expr
   76     | expr . T_OR expr
   78     | T_MINUS expr .

    $default  reduce using rule 78 (expr)


State 71

   62 expr: expr . T_PLUS expr
   63     | expr . T_MINUS expr
   64     | expr . T_MULT expr
   65     | expr . T_DIV expr
   66     | expr . T_LEFTSHIFT expr
   67     | expr . T_RIGHTSHIFT expr
   68     | expr . T_MOD expr
   69     | expr . T_EQ expr
   70     | expr . T_NEQ expr
   71     | expr . T_LT expr
   72     | expr . T_LEQ expr
   73     | expr . T_RT expr
   74     | expr . T_GEQ expr
   75     | expr . T_AND expr
   76     | expr . T_OR expr
   79     | T_NOT expr .

    $default  reduce using rule 79 (expr)


State 72

   40 method_call: T_ID T_LPAREN . method_arg_list T_RPAREN

    T_TRUE            shift, and go to state 52
    T_FALSE           shift, and go to state 53
    T_LPAREN          shift, and go to state 54
    T_MINUS           shift, and go to state 55
    T_NOT             shift, and go to state 56
    T_INTCONSTANT     shift, and go to state 57
    T_CHARCONSTANT    shift, and go to state 58
    T_STRINGCONSTANT  shift, and go to state 94
    T_ID              shift, and go to state 59

    $default  reduce using rule 53 (method_arg_list)

    method_call            go to state 60
    method_arg_list        go to state 95
    method_arg_comma_list  go to state 96
    method_arg             go to state 97
    expr                   go to state 98
    value                  go to state 62
    constant               go to state 63
    bool_constant          go to state 64


State 73

   80 value: T_ID T_LSB . expr T_RSB

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 99
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 74

   14 field_decl: T_VAR T_ID decaf_type T_ASSIGN expr T_SEMICOLON .

    $default  reduce using rule 14 (field_decl)


State 75

   69 expr: expr T_EQ . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 100
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 76

   72 expr: expr T_LEQ . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 101
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 77

   74 expr: expr T_GEQ . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 102
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 78

   70 expr: expr T_NEQ . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 103
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 79

   66 expr: expr T_LEFTSHIFT . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 104
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 80

   67 expr: expr T_RIGHTSHIFT . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 105
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 81

   75 expr: expr T_AND . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 106
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 82

   76 expr: expr T_OR . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 107
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 83

   62 expr: expr T_PLUS . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 108
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 84

   63 expr: expr T_MINUS . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 109
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 85

   64 expr: expr T_MULT . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 110
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 86

   65 expr: expr T_DIV . expr

    T_TRUE          shift, and go to state 52
    T_FALSE         shift, and go to state 53
    T_LPAREN        shift, and go to state 54
    T_MINUS         shift, and go to state 55
    T_NOT           shift, and go to state 56
    T_INTCONSTANT   shift, and go to state 57
    T_CHARCONSTANT  shift, and go to state 58
    T_ID            shift, and go to state 59

    method_call    go to state 60
    expr           go to state 111
    value          go to state 62
    constant       go to state 63
    bool_constant  go to state 64


State 87

   71 expr: expr T_LT . expr
